[package]
name = "workflow-unistore"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
cfg-if = "1.0.0"
thiserror = "1.0.32"
wasm-bindgen = "0.2.79"
base64 = "0.13.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
home = "0.5.3"
async-std = { version = "1.12.0", features = ['attributes'] }

# [target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
[dependencies.web-sys]
version = "0.3.56"
features = [
    'Window',
    'Storage',
]
